flux/apps/base/authentik/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.davud.io`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: security-headers
          namespace: traefik
  tls:
    secretName: authentik-tls
